tools/tests/errors/surf_lex_05.ki
# LEXER: a \x escape with only one hex digit before the closing quote
var s = "byte \xA"